# pico_wifi

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: rpi_pico_w.overlay
app/src/: app_shell.c  app_shell.h
drivers/wifi/zephyr_cyw43/src/: zephyr_cyw43_drv.c
drivers/wifi/zephyr_cyw43/src/picowi_pio/: picowi_pico.c
